[gd_scene load_steps=2 format=3 uid="uid://bdatnpgw2qv7d"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_0hjkm"]

[node name="MainGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0hjkm")

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CharacterArea" type="VBoxContainer" parent="UI/GameUI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -150.0
offset_right = 350.0
offset_bottom = 150.0

[node name="HandArea" type="HBoxContainer" parent="UI/GameUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = -50.0

[node name="ActionButtons" type="HBoxContainer" parent="UI/GameUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -25.0
offset_right = 200.0
offset_bottom = 25.0

[node name="EquipTraitButton" type="Button" parent="UI/GameUI/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "裝備特徵"

[node name="UseActionButton" type="Button" parent="UI/GameUI/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "使用行動"

[node name="GameInfo" type="VBoxContainer" parent="UI/GameUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_right = -50.0
offset_bottom = 200.0

[node name="TurnLabel" type="Label" parent="UI/GameUI/GameInfo"]
layout_mode = 2
text = "回合: 1"

[node name="PhaseLabel" type="Label" parent="UI/GameUI/GameInfo"]
layout_mode = 2
text = "階段: 回合開始"

[node name="FoodLabel" type="Label" parent="UI/GameUI/GameInfo"]
layout_mode = 2
text = "食物: 0"